k8s/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment
  namespace: default
  labels:
    app: devops 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
      - name: devops-demo
        image: anand0420/demo:v20250725162256
        ports:
        - containerPort: 80
